maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:17: error: not found: value set
        set indication(a,b,p)
        ^